--- a/index.css
+++ b/index.css
@@ -1,4 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cinzel&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kite+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
+
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+/*@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Prata&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Averia+Libre:wght@300;400&display=swap');
@@ -155,10 +167,9 @@ body:active * {
 }
 .applyBtn:hover {
   background: #ebcb98;
-}
+*/
 
-
-/* Extra small devices (phones, 600px and down) */
+/* Extra small devices (phones, 600px and down) 
 @media only screen and (max-width: 600px) {
   #app {
     height: auto;
@@ -219,11 +230,11 @@ body:active * {
   .mozart {
     margin-top: 4rem;
   }
-}
+}*/
 
 
 
-/* Medium devices (landscape tablets, 768px and up) */
+/* Medium devices (landscape tablets, 768px and up) 
 @media only screen and (min-width: 601px) and (max-width: 900px) {
   #app {
     height: auto;
@@ -277,4 +288,142 @@ body:active * {
   .image img {
     display: none;
   }
+}*/
+
+
+
+/* landing page */
+.landingPageContainer {
+  width: 100%;
+  height: 120vh;
+  padding: 0 120px;
+  background-image:
+  linear-gradient(
+    #fff2afa9, 
+    #fff2afd5
+    ), url(./img/ladingPageImg2.jpg);
+  background-position: center;
+  background-size: cover;
+  /*background: #FFF1AF;*/
+}
+.navBarContainer {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+}
+.navBarContainer .logo {
+  color: rgb(105, 25, 25);
+  height: 50px;
+  font-family: 'Cinzel', serif;
+  font-size: 30px;
+  font-weight: bolder;
+    
+}
+.navBarContainer .loginButton {
+  border: none;
+  text-decoration: none;
+  font-size: 18px;
+  color: #000;
+  margin-right: 2rem;
+  font-weight: bold;
+}
+.navBarContainer .signUpButton {
+  border: none;
+  text-decoration: none;
+  font-size: 18px;
+  padding: 13px 40px;
+  border-radius: 10px;
+  background: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+}
+.mainPageContainer {
+  width: 100%;
+  height: 80vh;
+  margin-top: 5rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 50px;
+}
+.mainPageContainer .z1 {
+  width: 100%;
+  height: auto;
+  padding-top: 4rem;
+}
+.mainPageContainer .z2 {
+  width: 100%;
+  height: 550px;
+  background-image: url(./img/IMG-20211220-WA0054-removebg-preview.png);
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  -webkit-filter: drop-shadow(15px 5px 5px #222);
+  filter: drop-shadow(15px 15px 25px #222);
+}
+
+
+
+.boxText {
+  font-size: 15px;
+  font-weight: bold;
+}
+.z1 .p1 {
+  font-size: 40px;
+  color:rgb(0, 0, 0);
+  font-weight: bolder;
+  line-height: 60px;
+  font-family: 'EB Garamond', serif;
+  padding-bottom: 2rem;
+}
+.z1 .p2 {
+  font-size: 20px;
+  font-weight: bold;
+  color: rgb(48, 48, 48);
+  margin-bottom: 4rem;
+}
+.z1 span {
+  background: -webkit-linear-gradient(#db9f27, #9B0000);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.z1 .signUpButton {
+  border: none;
+  text-decoration: none;
+  font-size: 18px;
+  padding: 15px 50px;
+  border-radius: 10px;
+  background: #ae421ec4;
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+}
+.z1 .signUpButton:hover {
+  background: #AE431E;
+  transition: all 550ms;
+}
+.mozart-inner {
+  animation: text-clip 1s 0s cubic-bezier(0.5, 0, 0.1, 1) both;
+  margin-bottom: 8rem;
+  font-family: 'Quicksand', sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 2rem;
+  color: rgb(34, 34, 34); 
+}
+#spin {
+  color:#B3541E;
+  font-weight: bolder;
+  font-size: 25px;
+}
+#spin:after {
+  content:"";
+  animation: spin 8s linear infinite;
+}
+@keyframes spin {
+  0% { content:"" }
+  20% { content: "Collateral" }
+  50% { content: "Bvn Needed" }
+  70% { content: "Guarantor" }
+  100% { content: "Bank Statement" }
 }
