--- a/index.css
+++ b/index.css
@@ -427,3 +427,111 @@ body:active * {
   70% { content: "Guarantor" }
   100% { content: "Bank Statement" }
 }
+
+
+
+
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+
+  .landingPageContainer {
+    width: 100%;
+    height: 120vh;
+    padding: 0 20px;
+    background: #FFF1AF;
+    background-image:
+  linear-gradient(
+    #fff2afa9, 
+    #fff2afd5
+    ), url(./img/ladingPageImg2.jpg);
+  background-position: center;
+  background-size: cover;
+  }
+  .navBarContainer .logo {
+    color: rgb(105, 25, 25);
+    height: 28px;
+    font-family: 'Cinzel', serif;
+    font-size: 20px;
+    font-weight: bolder;
+      
+  }
+  .navBarContainer .loginButton {
+  border: none;
+  text-decoration: none;
+  font-size: 16px;
+  color: #000;
+  margin-right: 2rem;
+  font-weight: bold;
+}
+.navBarContainer .signUpButton {
+  border: none;
+  text-decoration: none;
+  font-size: 16px;
+  padding: 8px 20px;
+  border-radius: 10px;
+  background: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+}
+.mozart-inner {
+  animation: text-clip 1s 0s cubic-bezier(0.5, 0, 0.1, 1) both;
+  margin-bottom: 8rem;
+  font-family: 'Quicksand', sans-serif;
+  font-size: 5vw;
+  font-weight: bold;
+  margin-top: 2rem;
+  color: rgb(34, 34, 34); 
+}
+#spin {
+  color:#B3541E;
+  font-weight: bolder;
+  font-size: 20px;
+}
+.mainPageContainer {
+  width: 100%;
+  height: auto;
+  margin-top: 3rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 50px;
+}
+.mainPageContainer .z1 {
+  width: 100%;
+  height: auto;
+  padding-top: 0rem;
+}
+.z1 .p1 {
+  font-size: 27px;
+  color:rgb(0, 0, 0);
+  font-weight: bolder;
+  line-height: 40px;
+  font-family: 'EB Garamond', serif;
+  padding-bottom: 2rem;
+}
+
+.z1 .signUpButton {
+  border: none;
+  text-decoration: none;
+  font-size: 16px;
+  padding: 13px 50px;
+  border-radius: 10px;
+  background: #AE431E;
+  color: rgb(255, 255, 255);
+  margin-top: 0rem;
+}
+
+  .mainPageContainer 
+  .z2 {
+    width: 100%;
+    height: 550px;
+    border-radius: 200px;
+    background-image: url(./img/IMG-20211220-WA0054-removebg-preview.png);
+    background-position: center;
+    background-size: cover;
+    border: 10px solid #AE431E;
+    position: relative;
+    display: none;
+  }
+  
+}
