--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Kite+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Shizuru&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
 
 
 * {
@@ -449,4 +450,137 @@ video {
   font-family: 'Shizuru', cursive;
   margin-bottom: 4rem;
 }
+}
+
+
+/* contact */
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .contact-us-bg {
+    width: 100%;
+    height: 100vh;
+    padding: 0;
+    background: #FFF1AF;
+    background-image:
+  linear-gradient(
+    #000000a9, 
+    #000000d5
+    ), url(./img/ladingPageImg2.jpg);
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  }
+  .contact-bg {
+    width: 100%;
+    height: 300px;
+    border-radius: 0 0 30px 30px;
+    background: rgba( 0, 0, 0, 0.25 );
+    box-shadow: 0 8px 32px 0 rgba(92, 94, 112, 0.37);
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+   
+  }
+  .contact-us-header {
+    color: #fff;
+    text-align: center;
+    font-size: 14vw;
+   margin-top: 5rem;
+   font-family: 'Luckiest Guy', cursive;
+   color: transparent;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgb(255, 255, 255);
+  }
+  .contact-footer {
+    width: 100%;
+    height: 100px;
+    background: rgba( 0, 0, 0, 0.25 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 30px 30px 0 0;
+   position: absolute;
+   bottom: 0;
+  }
+  .contact-bg .social-btn {
+    width: 100%;
+    height: auto;
+    padding: 20px;
+  }
+  .btn1 {
+    display: flex;
+    justify-content: space-between;
+  }
+  .btn2 {
+    display: flex;
+    justify-content: space-between;
+    width: 220px;
+    margin: 1rem auto 0 auto;
+  }
+  .contact-bg .social-btn .facebook ,
+  .contact-bg .social-btn .twitter,
+  .contact-bg .social-btn .insta,
+  .contact-bg .social-btn .tiktok,
+  .contact-bg .social-btn .linked,
+  .contact-bg .social-btn .whatsapp,
+  .contact-bg .social-btn .telegram{
+    width: 40px;
+    height: 40px;
+    border-radius: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba( 255, 255, 255, 0.25 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    cursor: pointer;
+  }
+  .contact-bg .social-btn .facebook:hover ,
+  .contact-bg .social-btn .twitter:hover,
+  .contact-bg .social-btn .insta:hover,
+  .contact-bg .social-btn .tiktok:hover,
+  .contact-bg .social-btn .linked:hover,
+  .contact-bg .social-btn .whatsapp:hover,
+  .contact-bg .social-btn .telegram:hover {
+    background: transparent;
+    transition: all 550ms;
+  }
+  
+  .contact-bg .address {
+    width: 100%;
+    height: auto;
+    margin-top: 1rem;
+    padding: 20px;
+  }
+  .contact-bg .address .ph {
+    color: #fff;
+    font-size: 5.5vw;
+    font-family: 'Luckiest Guy', cursive;
+    color: transparent;
+     -webkit-text-stroke-width: 0.5px;
+     -webkit-text-stroke-color: rgb(255, 255, 255);
+  }
+  .contact-bg .address .pa {
+    color: rgb(219, 219, 219);
+    margin-top: 0.7rem;
+    font-family: 'Quicksand', sans-serif;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
