--- a/index.css
+++ b/index.css
@@ -490,16 +490,7 @@ video {
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: rgb(255, 255, 255);
   }
-  .contact-footer {
-    width: 100%;
-    height: 100px;
-    background: rgba( 0, 0, 0, 0.25 );
-    backdrop-filter: blur( 4px );
-    -webkit-backdrop-filter: blur( 4px );
-    border-radius: 30px 30px 0 0;
-   position: absolute;
-   bottom: 0;
-  }
+  
   .contact-bg .social-btn {
     width: 100%;
     height: auto;
@@ -566,7 +557,28 @@ video {
     margin-top: 0.7rem;
     font-family: 'Quicksand', sans-serif;
   }
-
+  .contact-footer {
+    width: 100%;
+    height: auto;
+    background: rgba( 0, 0, 0, 0.25 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 30px 30px 0 0;
+   position: absolute;
+   bottom: 0;
+   text-align: center;
+   padding: 20px;
+  }
+  .contact-footer .footer-text {
+    color: rgba(255, 255, 255, 0.637);
+    font-size: 4vw;
+    font-family: 'Quicksand', sans-serif;
+    margin-bottom: 1.5rem;
+  }
+  .contact-footer .right {
+    color: rgba(255, 255, 255, 0.89);
+    font-family: 'Quicksand', sans-serif;
+  }
 
 
 
