--- a/index.css
+++ b/index.css
@@ -373,7 +373,7 @@
     width: 100%;
     height: 100vh;
     padding: 0;
-    background: #FFF1AF;
+    background: #000000;
     background-image:
   linear-gradient(
     #000000a9, 
@@ -585,7 +585,7 @@ video {
     width: 100%;
     height: 100vh;
     padding: 0;
-    background: #FFF1AF;
+    background: #000000;
     background-image:
   linear-gradient(
     #000000a9, 
