--- a/index.css
+++ b/index.css
@@ -5,6 +5,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Shizuru&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;500&display=swap');
 
 
 * {
@@ -546,7 +548,7 @@ video {
 #home-top-video {
     left: 0%;
     top: 0%;
-    height: 140vh;
+    height: 160vh;
     width: 100%;
     overflow: hidden;
     position: absolute;
@@ -569,8 +571,26 @@ video {
     font-family: 'Quicksand', sans-serif;
   }
   .intro .about-header {
-    font-family: 'Shizuru', cursive;
+    font-family: 'Bebas Neue', cursive;
     margin-bottom: 4rem;
+    text-align: center;
+    letter-spacing: 8px;
+    font-size: 40px;
+  }
+  .intro .about-sub-header {
+     font-family: 'Nunito', sans-serif;
+    margin-bottom: 2.5rem;
+    text-align: center;
+    letter-spacing: 3px;
+    font-size: 30px;
+  }
+  .intro .benefit-header{
+    font-family: 'Nunito', sans-serif;
+    margin-bottom: 2.5rem;
+    text-align: center;
+    letter-spacing: 2px;
+    font-size: 30px;
+    margin-top: 4rem;
   }
 #home-top-video:before {
   content:"";
@@ -582,14 +602,18 @@ video {
   z-index:1;
   background:linear-gradient(to right,rgba(0, 0, 0, 0.815),rgba(0, 0, 0, 0.815));
 }
-
+.intro .benefit-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   #home-top-video {
     left: 0%;
     top: 0%;
-    height: 250vh;
+    height: 280vh;
     width: 100%;
     overflow: hidden;
     position: absolute;
@@ -604,6 +628,10 @@ video {
     z-index: 1;
     color: #fff;
 }
+.intro .about-sub-header {
+ font-size: 6vw;
+ letter-spacing: 2px;
+}
 .intro p {
   line-height: 30px;
   font-size: 4.5vw;
@@ -611,8 +639,15 @@ video {
   font-family: 'Quicksand', sans-serif;
 }
 .intro .about-header {
-  font-family: 'Shizuru', cursive;
   margin-bottom: 4rem;
+}
+.intro .benefit-header{
+  font-family: 'Nunito', sans-serif;
+  margin-bottom: 2.5rem;
+  text-align: center;
+  letter-spacing: 2px;
+  font-size: 6.5vw;
+  margin-top: 4rem;
 }
 }
 
