--- a/index.css
+++ b/index.css
@@ -788,7 +788,7 @@ video {
 
   /* Beneficiary */
 .beneficiary-container {
-  background-color: #DC882E;
+  background-color: #D1C593;
   width: 100%;
   height: 800px;
   display: flex;
@@ -989,7 +989,7 @@ video {
 
 /* Beneficiary */
 .beneficiary-container {
-  background-color: #DC882E;
+  background-color: #D1C593;
   width: 100%;
   height: 800px;
   display: flex;
