--- a/index.css
+++ b/index.css
@@ -204,6 +204,83 @@
   font-family: "Quicksand", sans-serif;
 }
 
+/* Beneficiary */
+.beneficiary-container {
+  background-color: #d1c593;
+  width: 100%;
+  height: 900px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 70px 120px;
+}
+
+.illus-container {
+  width: 500px;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.illus-container h1 {
+  text-align: center;
+  color: #fff;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+#slider {
+  position: relative;
+  width: 500px;
+  overflow: hidden;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
+}
+#slider ul {
+  position: relative;
+  list-style: none;
+  height: 100%;
+  width: 10000%;
+  padding: 0;
+  margin: 0;
+  transition: all 750ms ease;
+  left: 0;
+}
+#slider ul li {
+  position: relative;
+  height: 100%;
+
+  float: left;
+}
+#slider ul li img {
+  width: 500px;
+}
+#slider #prev,
+#slider #next {
+  width: 50px;
+  line-height: 50px;
+  text-align: center;
+  color: white;
+  text-decoration: none;
+  position: absolute;
+  top: 50%;
+  border-radius: 50%;
+  font-size: 2rem;
+  text-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
+  transform: translateY(-50%);
+  transition: all 150ms ease;
+}
+#slider #prev {
+  left: 10px;
+}
+#slider #next {
+  right: 10px;
+}
+
+#slider #prev:hover,
+#slider #next:hover {
+  background-color: rgba(0, 0, 0, 0.5);
+  text-shadow: 0;
+}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   .body2 .contact-footer .footer-text {
@@ -219,7 +296,7 @@
   }
   .landingPageContainer {
     width: 100%;
-    height: 140vh;
+    height: 100vh;
     padding: 0 20px;
     background: #fff1af;
     background-image: linear-gradient(#fff2afa9, #fff2afd5),
@@ -315,13 +392,54 @@
     position: relative;
     display: none;
   }
+
+  /* Beneficiary */
+  .beneficiary-container {
+    background-color: #d1c593;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    padding: 3rem 20px;
+  }
+
+  .illus-container {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .illus-container img {
+    display: none;
+  }
+  .illus-container h1 {
+    text-align: center;
+    color: #fff;
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+    font-size: 7.5vw;
+    width: 100%;
+    margin-bottom: 3rem;
+  }
+
+  #slider {
+    position: relative;
+    width: 300px;
+    overflow: hidden;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
+  }
+  #slider ul li img {
+    width: 300px;
+  }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 601px) and (max-width: 950px) {
   .landingPageContainer {
     width: 100%;
-    height: 130vh;
+    height: 100vh;
     padding: 0 70px;
     background: #fff1af;
     background-image: linear-gradient(#fff2afa9, #fff2afd5),
@@ -411,6 +529,47 @@
     border: 10px solid #ae431e;
     position: relative;
     display: none;
+  }
+
+  /* Beneficiary */
+  .beneficiary-container {
+    background-color: #d1c593;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    padding: 3rem 20px;
+  }
+
+  .illus-container {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .illus-container img {
+    display: none;
+  }
+  .illus-container h1 {
+    text-align: center;
+    color: #fff;
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+    font-size: 30px;
+    width: 300px;
+    margin-bottom: 3rem;
+  }
+
+  #slider {
+    position: relative;
+    width: 400px;
+    overflow: hidden;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
+  }
+  #slider ul li img {
+    width: 400px;
   }
 }
 
@@ -785,82 +944,6 @@ video {
     color: rgba(255, 255, 255, 0.89);
     font-family: "Quicksand", sans-serif;
   }
-
-  /* Beneficiary */
-.beneficiary-container {
-  background-color: #D1C593;
-  width: 100%;
-  height: 800px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 70px 120px;
-}
-
-.illus-container {
-  width: 500px;
-  height: 300px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.illus-container h1 {
-  text-align: center;
-  color: #fff;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-#slider {
-  position: relative;
-  width: 450px;
-  overflow: hidden;
-  box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
-}
-#slider ul {
-  position: relative;
-  list-style: none;
-  height: 100%;
-  width: 10000%;
-  padding: 0;
-  margin: 0;
-  transition: all 750ms ease;
-  left: 0;
-}
-#slider ul li {
-  position: relative;
-  height: 100%;
-
-  float: left;
-}
-#slider ul li img {
-  width: 450px;
-}
-#slider #prev,
-#slider #next {
-  width: 50px;
-  line-height: 50px;
-  text-align: center;
-  color: white;
-  text-decoration: none;
-  position: absolute;
-  top: 50%;
-  border-radius: 50%;
-  font-size: 2rem;
-  text-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
-  transform: translateY(-50%);
-  transition: all 150ms ease;
-}
-#slider #prev {
-  left: 10px;
-}
-#slider #next {
-  right: 10px;
-}
-
-#slider #prev:hover, #slider #next:hover {
-  background-color: rgba(0, 0, 0, 0.5);
-  text-shadow: 0;
-}
 }
 
 @media screen and (min-width: 951px) {
@@ -986,81 +1069,3 @@ video {
     font-family: "Quicksand", sans-serif;
   }
 }
-
-/* Beneficiary */
-.beneficiary-container {
-  background-color: #D1C593;
-  width: 100%;
-  height: 900px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 70px 120px;
-}
-
-.illus-container {
-  width: 500px;
-  height: 300px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.illus-container h1 {
-  text-align: center;
-  color: #fff;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-#slider {
-  position: relative;
-  width: 500px;
-  overflow: hidden;
-  box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
-}
-#slider ul {
-  position: relative;
-  list-style: none;
-  height: 100%;
-  width: 10000%;
-  padding: 0;
-  margin: 0;
-  transition: all 750ms ease;
-  left: 0;
-}
-#slider ul li {
-  position: relative;
-  height: 100%;
-
-  float: left;
-}
-#slider ul li img {
-  width: 500px;
-}
-#slider #prev,
-#slider #next {
-  width: 50px;
-  line-height: 50px;
-  text-align: center;
-  color: white;
-  text-decoration: none;
-  position: absolute;
-  top: 50%;
-  border-radius: 50%;
-  font-size: 2rem;
-  text-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
-  transform: translateY(-50%);
-  transition: all 150ms ease;
-}
-#slider #prev {
-  left: 10px;
-}
-#slider #next {
-  right: 10px;
-}
-
-#slider #prev:hover, #slider #next:hover {
-  background-color: rgba(0, 0, 0, 0.5);
-  text-shadow: 0;
-}
-
-
