--- a/index.css
+++ b/index.css
@@ -13,6 +13,11 @@
   margin: 0;
   box-sizing: border-box;
 }
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .body2 {
   position: relative;
 }
